--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a2f11578",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6e25cfe0",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "720e56ad",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "355a3a5c",
    "metadata": {},
    "outputs": [],
@@ -111,11 +111,11 @@
     "def sample_B(seed):\n",
     "    # B is the matrix whose rows are the distribution of topic i over the vocabulary\n",
     "    # Each row means : for each topic i we have the probability of word i to occur\n",
-    "    # Using what Kanthavel did before\n",
+    "    # TODO: Change with Dirichlet prior -> See line to change\n",
     "    b = np.empty((k,V))\n",
     "    np.random.seed(seed)\n",
     "    for i in range(k):\n",
-    "        b[i,:] = build_topic_distribution(seed)\n",
+    "        b[i,:] = build_topic_distribution(seed)  # TODO: Change\n",
     "    return b\n",
     "\n",
     "def sample_G(k, gamma, seed):  # Won't update Sigma automatically anymore\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "51f7868c",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
     "        self.G = np.zeros((k, k))  # Adjacency Matrix (Check also python package \"networkx\" for graph objects!)\n",
     "        self.K = np.zeros((k, k))  # Precision matrix of G\n",
     "        self.Sigma = np.zeros((k, k))  # Inverse of K\n",
-    "        self.Z = None  # Z shouldn't be created before W is sampled (depends if generated or read)\n",
+    "        self.Z = None  # Z shouldn't be created before W is sampled\n",
     "        self.seed = seed  # Random seed\n",
     "        \n",
     "    def get_M(self):\n",
@@ -175,68 +175,40 @@
     "        return int(self.W.max())\n",
     "    \n",
     "    # Generations\n",
-    "    def generate_W_from_M(self, M):\n",
-    "        # We use M as the maximum repetitions of words\n",
-    "        # Hence, for each word in V in each document, we throw a randint(0,M) for the generative process\n",
+    "    def generate_WZ_from_M(self, M):\n",
     "        if M == 0:\n",
     "            raise Exception('Error: Input 0 for the chosen method')\n",
-    "\n",
+    "        elif np.sum(self.Theta, axis=1).sum(axis=0) == 0:\n",
+    "            raise Exception('Error: Theta matrix 0')\n",
+    "        elif np.sum(self.B, axis=1).sum(axis=0) == 0:\n",
+    "            raise Exception('Error: B matrix 0')\n",
+    "        \n",
+    "        Z = [[[] for k in range(V)] for j in range(D)]  # Unknown amount of repetitions\n",
     "        np.random.seed(self.seed)\n",
+    "        # Ref https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html\n",
+    "        # Multinomial drawing for Z and then W\n",
     "        for d in range(D):\n",
-    "            for n in range(V):\n",
-    "                self.W[d,n] = np.random.randint(0,M)\n",
+    "            z_d = []\n",
+    "            N_d = np.random.randint(0, M*V)  # Maximum of words in the document\n",
+    "            for n in range(N_d):\n",
+    "                # Multinomial drawing from Theta, because it has to be normalized\n",
+    "                # This will give a canonical vector over k\n",
+    "                mult = np.random.multinomial(1, self.Theta[d], size=1)\n",
+    "                z = int(np.where(mult == 1)[-1])  # Topic index\n",
+    "                # Multinomial drawing from Beta\n",
+    "                # This will give a canonical vector over V\n",
+    "                mult = np.random.multinomial(1, self.B[z], size=1)\n",
+    "                w = int(np.where(mult == 1)[-1])  # Word index\n",
+    "                Z[d][w].append(z)\n",
+    "                self.W[d,w] += 1\n",
     "        print('Success: W generated from M')\n",
-    "        \n",
-    "    def generate_W_from_Z(self):  # TODO: This is deterministic, maybe we can factor it out with the other functions?\n",
-    "        \n",
-    "        if self.Z is None or np.sum(self.Z, axis=2).sum(axis=1).sum(axis=0) == 0:\n",
-    "            raise Exception('Error: Z matrix is None or 0')\n",
-    "        \n",
-    "        # We just need the lengths of Z[d,n]\n",
-    "        # Since that gives the repetitions of word n in doc d\n",
-    "        for d in range(D):\n",
-    "            for n in range(V):\n",
-    "                # This gives the index of the element next to the end of Z\n",
-    "                # Hence its already decreased to give the amounts\n",
-    "                derp = np.where(self.Z[d,n] == -1)\n",
-    "                rep = derp[-1][0]\n",
-    "                self.W[d, n] = int(rep)\n",
-    "        print('Success: W generated from Z')\n",
-    "        \n",
-    "    def generate_Z_from_W(self):\n",
     "        m = self.get_M()\n",
     "        self.Z = - np.ones((D, V, int(m)))\n",
-    "        # Multinomial drawing from Theta, because it has to be normalized\n",
-    "        # Ref https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html\n",
-    "        # np.random.multinomial(1, self.Theta[d], size=1)\n",
-    "        # This will give a canonical vector over k\n",
-    "        \n",
-    "        np.random.seed(self.seed)\n",
-    "        if np.sum(self.Theta, axis=1).sum(axis=0) == 0:\n",
-    "            raise Exception('Error: Theta matrix 0')\n",
-    "        \n",
     "        for d in range(D):\n",
     "            for n in range(V):\n",
-    "                for m in range(self.W[d,n]):\n",
-    "                    mult = np.random.multinomial(1, self.Theta[d], size=1)\n",
-    "                    self.Z[d,n,m] = int(np.where(mult == 1))\n",
-    "        print('Success: Z generated from Theta')\n",
-    "    \n",
-    "    def generate_Z_from_M(self, M):\n",
-    "        self.Z = - np.ones((D, V, M))\n",
-    "        # Multinomial drawing from Theta, because it has to be normalized\n",
-    "        # Ref https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html\n",
-    "        # np.random.multinomial(1, self.Theta[d], size=1)\n",
-    "        # This will give a canonical vector over k\n",
-    "        np.random.seed(self.seed)\n",
-    "        if np.sum(self.Theta, axis=1).sum(axis=0) == 0:\n",
-    "            raise Exception('Error: Theta matrix 0')\n",
-    "        for d in range(D):\n",
-    "            for n in range(V):\n",
-    "                for m in range(np.random.randint(0, M)):\n",
-    "                    mult = np.random.multinomial(1, self.Theta[d], size=1)\n",
-    "                    self.Z[d,n,m] = np.where(mult == 1)[-1]\n",
-    "        print('Success: Z generated from Theta')\n",
+    "                for i in range(len(Z[d][n])):  # Only take existing topics\n",
+    "                    self.Z[d][n][i] = Z[d][n][i]  # Replace\n",
+    "        print('Success: Z generated from M')\n",
     "    \n",
     "    # Transformations\n",
     "    def update_Theta(self):\n",
@@ -247,9 +219,6 @@
     "    \n",
     "    def update_C(self):\n",
     "        self.C = update_C(self.C, self.Z)\n",
-    "        \n",
-    "    def update_B(self):\n",
-    "        self.B = update_B(self.B, self.C)\n",
     "    \n",
     "    def update_Sigma(self):\n",
     "        self.Sigma = update_Sigma(self.K)\n",
@@ -270,21 +239,16 @@
     "        self.H = sample_H(self.Sigma, k, self.seed)\n",
     "        self.update_Theta()\n",
     "    \n",
-    "    def generate_all_data(self):\n",
+    "    def generate_all_data(self, gamma, M):\n",
     "        # TODO: This should run all relevant methods one after the other in order to fully populate all data matrixes\n",
-    "        # self.generate something\n",
-    "        # self.update something\n",
-    "        # ecc\n",
+    "        self.sample_B()  # Will get B\n",
+    "        self.sample_GK(gamma)  # Will get G, K, Sigma\n",
+    "        self.sample_H()  # Will get H, Theta from Sigma\n",
+    "        self.generate_WZ_from_M(M)  # Will get W, Z from Theta, B\n",
+    "        self.update_E()  # Will get E from Z\n",
+    "        self.update_C()  # Will get C from Z\n",
     "        pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9c6d79b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -384,10 +348,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "significant-prairie",
+   "metadata": {},
+   "source": [
+    "# 2.2 Beta sampling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "military-mileage",
+   "metadata": {},
+   "source": [
+    "### Task:\n",
+    "\n",
+    "You must implement a function that receives matrices $C_i$, $W$ and vector $\\alpha$ and generates the next $B_{i+1}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "violent-explorer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MC_sample_B():\n",
+    "    # Sample B from Dir posterior\n",
+    "    return B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "global-exclusive",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "3360d53c",
    "metadata": {},
    "source": [
-    "# 2.2 Metropolis-Hastings MC Sampling"
+    "# 2.3 Metropolis-Hastings MC Sampling"
    ]
   },
   {
@@ -509,7 +511,7 @@
    "id": "4472024a",
    "metadata": {},
    "source": [
-    "# 2.3 BDMCMC Sampling"
+    "# 2.4 BDMCMC Sampling"
    ]
   },
   {
@@ -687,19 +689,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e2901c32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: Sigma transformed from K\n",
+      "Success: Theta transformed from H\n",
+      "Success: W generated from M\n",
+      "Success: Z generated from M\n",
+      "Success: E transformed from Z\n"
+     ]
+    }
+   ],
    "source": [
     "test0 = Simulator(D, V, k, seed=1996)\n",
     "test0.sample_GK(gamma)  # Will get G, K, Sigma\n",
     "test0.sample_H()  # Will get H, Theta from Sigma\n",
-    "test0.generate_Z_from_M(M)  # Will get Z from Theta\n",
+    "#test0.generate_Z_from_M(M)  # DEPRECATED\n",
     "test0.sample_B()  # Will get B\n",
-    "test0.generate_W_from_M(M)  # Will get W\n",
+    "#test0.generate_W_from_M(M)  # DEPRECATED\n",
+    "#test0.generate_W_from_Z()  # DEPRECATED\n",
+    "test0.generate_WZ_from_M(M)\n",
     "test0.update_E()\n",
-    "test0.generate_W_from_Z()\n",
     "\n",
     "# Note for debugging:\n",
     "# After updating the class, you need to re run the class object initialization\n",
@@ -714,24 +729,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "90cc63ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 7.,  1.,  0., 10.,  1.,  7.,  8.,  8.,  7.,  9.],\n",
+       "       [ 7.,  1.,  5.,  7.,  1.,  3.,  4.,  8.,  9., 10.],\n",
+       "       [10.,  0.,  4., 11.,  0.,  3.,  2.,  8., 12., 12.],\n",
+       "       [ 0.,  0.,  2.,  0.,  0.,  0.,  2.,  2.,  2.,  1.],\n",
+       "       [ 2.,  0.,  1.,  2.,  0.,  2.,  4.,  3.,  2.,  4.]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test0.W"
+    "test0.W  # Sadly it's not really respected that M is the real max, just a desired one"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ae6fb405",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: Sigma transformed from K\n",
+      "Success: Theta transformed from H\n",
+      "Success: W generated from M\n",
+      "Success: Z generated from M\n",
+      "Success: E transformed from Z\n",
+      "Success: C transformed from Z\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.,  1.,  1.,  0.,  0.,  2.,  1.,  1.,  2.,  2.],\n",
+       "       [11., 11.,  6.,  1., 13.,  5.,  7.,  7.,  7.,  4.],\n",
+       "       [14., 18.,  7.,  0., 10.,  3.,  4., 15.,  2.,  6.],\n",
+       "       [ 2.,  4.,  1.,  0.,  3.,  0.,  1.,  1.,  0.,  0.],\n",
+       "       [12., 13.,  3.,  2.,  7.,  1.,  3.,  9.,  8.,  4.]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# It would be nice to have it all in one function\n",
     "test1 = Simulator(D, V, k, seed=1979)\n",
-    "test1.generate_all_data()\n",
+    "test1.generate_all_data(gamma, M)\n",
     "test1.W"
    ]
   },
@@ -929,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
