--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a2f11578",
    "metadata": {},
    "outputs": [],
@@ -43,34 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "6e25cfe0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: sklearn in /Users/caspar/.local/lib/python3.8/site-packages (0.0)\n",
-      "Requirement already satisfied: scikit-learn in /Users/caspar/.local/lib/python3.8/site-packages (from sklearn) (1.0.1)\n",
-      "Requirement already satisfied: numpy>=1.14.6 in /Applications/JupyterLab.app/Contents/Resources/jlab_server/lib/python3.8/site-packages (from scikit-learn->sklearn) (1.21.2)\n",
-      "Requirement already satisfied: joblib>=0.11 in /Users/caspar/.local/lib/python3.8/site-packages (from scikit-learn->sklearn) (1.1.0)\n",
-      "Requirement already satisfied: scipy>=1.1.0 in /Applications/JupyterLab.app/Contents/Resources/jlab_server/lib/python3.8/site-packages (from scikit-learn->sklearn) (1.7.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/caspar/.local/lib/python3.8/site-packages (from scikit-learn->sklearn) (3.0.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.stats import bernoulli\n",
-    "!pip install sklearn\n",
+    "#!pip install sklearn\n",
     "from sklearn.datasets import make_sparse_spd_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "720e56ad",
    "metadata": {},
    "outputs": [],
@@ -110,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "355a3a5c",
    "metadata": {},
    "outputs": [],
@@ -160,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "51f7868c",
    "metadata": {},
    "outputs": [],
@@ -292,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "69050e8a",
    "metadata": {},
    "outputs": [],
@@ -301,7 +287,7 @@
     "    begin_index = 0\n",
     "    end_index = len(sequence)-1\n",
     "    \n",
-    "    if sequence[begin_index] <= item <= sequence[end_index]:\n",
+    "    if sequence[begin_index] <= item and item <= sequence[end_index]:\n",
     "        while begin_index < end_index - 1:  # Finish when the list has 2 items: Begin and end\n",
     "            midpoint = (end_index + begin_index)//2\n",
     "            midpoint_value = sequence[midpoint]\n",
@@ -310,7 +296,7 @@
     "            else:\n",
     "                end_index = midpoint\n",
     "        if sequence[begin_index] == item:\n",
-    "            return begin_index\n",
+    "            return begin_index + 1\n",
     "        elif item <= sequence[end_index]:\n",
     "            return end_index\n",
     "    else:\n",
@@ -319,43 +305,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "id": "9d16baba",
    "metadata": {},
    "outputs": [],
    "source": [
     "def MC_sample_Z(Z, W, Theta, B, E, C):  # D, k are global variables\n",
     "    for d in range(D):\n",
-    "        # computing N_d\n",
-    "        N_d = int(np.sum(W[d]))\n",
-    "        for i in range(N_d):\n",
-    "            v = V[i]\n",
-    "            I_di = W[d][i]\n",
+    "        for v in range(V):\n",
+    "            I_di = int(W[d][v])\n",
     "            for j in range(I_di):\n",
-    "                z_hat = Z[d][i][j]\n",
+    "                z_hat = int(Z[d][v][j])\n",
     "                \n",
     "                E[d][z_hat] = max(0, E[d][z_hat]-1)\n",
     "                \n",
     "                C[z_hat][v] = max(0, C[z_hat][v]-1)\n",
     "                \n",
-    "                Rho = [0]  # Needs to start from zero to have the interval to fall into topic 1\n",
+    "                Rho = []  # Needs to start from zero to have the interval to fall into topic 1\n",
     "                Rho_z = 0\n",
+    "                Rho.append(Rho_z)\n",
     "                \n",
     "                for z in range(k):\n",
     "                    # Compute the denominator sum\n",
     "                    C_vk = 0\n",
-    "                    for b in range(N_d):\n",
-    "                        if b != i:\n",
+    "                    for b in range(V):\n",
+    "                        if b != v:\n",
     "                            C_vk += C[z][b]\n",
     "                    # Compute the upper limits of the topic probabilities\n",
-    "                    Rho_z += (E[d][z] + Theta[d])*(C[z][v] + B[z])/(sum(C_vk)+V*B[z])\n",
+    "                    d_part = E[d][z] + Theta[d][z]\n",
+    "                    z_part = C[z][v] + B[z][v]\n",
+    "                    denom = C_vk + V*B[z][v]\n",
+    "                    Rho_z += d_part * z_part / denom\n",
     "                    Rho.append(Rho_z)\n",
-    "                    \n",
+    "                \n",
     "                u = np.random.uniform(0, Rho[-1])\n",
-    "                z_hat = binary_search(Rho, u)\n",
+    "                z_hat = binary_search(Rho, u) - 1\n",
     "                E[d][z_hat] += 1\n",
     "                C[z_hat][v] += 1\n",
-    "                Z[d][i][j] = z_hat\n",
+    "                Z[d][v][j] = z_hat\n",
     "    # Note that we directly modify Z since the update per topic helps for the next iteration \n",
     "    return Z"
    ]
@@ -711,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "e2901c32",
    "metadata": {},
    "outputs": [
@@ -751,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "90cc63ed",
    "metadata": {},
    "outputs": [
@@ -765,7 +752,7 @@
        "       [ 2.,  0.,  1.,  2.,  0.,  2.,  4.,  3.,  2.,  4.]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "ae6fb405",
    "metadata": {},
    "outputs": [
@@ -802,7 +789,7 @@
        "       [12., 13.,  3.,  2.,  7.,  1.,  3.,  9.,  8.,  4.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,21 +811,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "eea7d1ae",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_15388/1411793958.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mMC_sample_Z\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTheta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mC\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_15388/1525889580.py\u001b[0m in \u001b[0;36mMC_sample_Z\u001b[0;34m(Z, W, Theta, B, E, C)\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mN_d\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN_d\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m             \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mV\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m             \u001b[0mI_di\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mW\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI_di\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[[ 4.,  4.,  4.,  4.,  4.,  4.,  4., -1., -1., -1., -1., -1.],\n",
+       "        [ 0., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [-1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 4.,  2.,  4.,  2.,  2.,  2.,  2.,  2.,  2.,  2., -1., -1.],\n",
+       "        [ 4., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  2.,  2.,  2., -1., -1., -1., -1., -1.],\n",
+       "        [ 4.,  4.,  4.,  4.,  4.,  4.,  4.,  4., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  2.,  2.,  2., -1., -1., -1., -1., -1.],\n",
+       "        [ 4.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2., -1., -1., -1.]],\n",
+       "\n",
+       "       [[ 1.,  1.,  1.,  1.,  1.,  1.,  1., -1., -1., -1., -1., -1.],\n",
+       "        [ 0., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 0.,  0.,  0.,  0.,  0., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  0.,  2.,  2., -1., -1., -1., -1., -1.],\n",
+       "        [ 3., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 1.,  1.,  1.,  1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  0.,  2.,  2.,  2.,  0.,  1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2., -1., -1.]],\n",
+       "\n",
+       "       [[ 1.,  1.,  1.,  1.,  4.,  1.,  1.,  4.,  3.,  1., -1., -1.],\n",
+       "        [-1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 0.,  0.,  0.,  0., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2., -1.],\n",
+       "        [-1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 1.,  1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.],\n",
+       "        [ 2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.,  2.]],\n",
+       "\n",
+       "       [[-1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [-1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 0.,  0., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [-1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [-1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [-1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 1.,  4., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 1.,  1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 1.,  2., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.]],\n",
+       "\n",
+       "       [[ 4.,  1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [-1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 0., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  0., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [-1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 4.,  4.,  4.,  1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "        [ 2.,  2.,  2.,  2., -1., -1., -1., -1., -1., -1., -1., -1.]]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1051,7 +1089,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
